2001-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: fixed serpent ring/ring naming problem

2001-08-05  Max Horn <max@quendi.de>
	* flic/playfli.h: was not double include protected! (caused troubles when using precompile headers)

2001-08-05  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc,actors.cc,actorio.cc:  Turn off 'flee' mode when
	switching to combat unless user explicitly choose 'flee'.

	* audio/Audio.h (public): Got rid of annoying warning.
	* conversation.cc: No face for Smith the Nightmare.
	* keyactions.cc: Applied Put_click() patch for keys.

2001-08-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc: fixed 'return to menu' after 'start new game' bug
	* configure.in, acconfig.h: define VER_MAJOR, VER_MINOR, VER_EXTRA 

2001-08-04  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Barge flag for SI fixed.
	* intrinsics.cc:  Watch for set_quality(-359).

2001-08-03  Max Horn <max@quendi.de>
	* exult_constants.h: fixed COUT/CERR to use namespace std:
	* dir.cc: fixed comments in Get_direction16. Hey Jeff, weren't you a
	  mathematician or so in the past? 8-)
	* various files: code cleanup, removed unneeded output and/or replaced
	  usage of cerr/cout with CERR/COUT in various place (only the tip of the iceberg)

2001-08-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* bggame.cc: fixed palette-change-flash in BG intro
	* sigame.cc: same for SI

2001-08-03  Max Horn <max@quendi.de>
	* audio/Audio.cc: added static Audio::Destroy() to deinit the audio system
	* exult.cc: properly use Audio::Destroy() to deinit the audio system

2001-08-03  Max Horn <max@quendi.de>
	* configure.in: slight change for Darwin/Mac OS X
	* audio/conv.cc added, conv.h cleaned up
	* audio/Audio.cc/.h: cleaned up code, fixed speech output on big endian systems
	* audio/Mixer.cc: code clean up
	* audio/pcb.h: disabled a call to "cerr" in the MacOS version, as it could be hit during